--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body class="page">
 <div class="page__content">
   <header class="header page__section">
-    <img src="./images/logo.svg" alt="Логотип проекта место" class="logo header__logo">
+    <img src="<%=require('./images/logo.svg')%>" alt="Логотип проекта место" class="logo header__logo">
   </header>
   <main class="content">
     <section class="profile page__section">
@@ -32,29 +32,82 @@
       © 2024 Mesto Russia
     </p>
   </footer>
-  <div class="popup popup_type_edit">
+  <div class="popup popup_type_avatar popup_is-animated">
+    <div class="popup__content popup__content-avatar">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-place">
+        <input
+          id="link-input"
+          type="url"
+          name="link"
+          class="popup__input popup__input_type_url_img"
+          placeholder="Ссылка на картинку"
+          required>
+        <span class="popup__input-error link-input-error"></span>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+  <div class="popup popup_type_edit popup_is-animated">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
       <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
+        <input 
+          id="name-input"
+          type="text"
+          name="name"
+          class="popup__input popup__input_type_name"
+          placeholder="Имя"
+          minlength="2"
+          maxlength="40"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, пробелы, знаки дефиса" required>
+        <span class="popup__input-error name-input-error"></span>
+        <input 
+          id="description-input"
+          type="text"
+          name="description"
+          class="popup__input popup__input_type_description"
+          placeholder="Занятие"
+          minlength="2"
+          maxlength="200"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, пробелы, знаки дефиса" required>
+        <span class="popup__input-error description-input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
-  <div class="popup popup_type_new-card">
+  <div class="popup popup_type_new-card popup_is-animated">
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form" name="new-place">
-        <input type="text" name="place-name" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+        <input
+          id="place-name-input" 
+          type="text"
+          name="place-name"
+          class="popup__input popup__input_type_card-name"
+          placeholder="Название"
+          minlength="2"
+          maxlength="30"
+          pattern="^[a-zA-Zа-яёА-ЯЁ\s\-]+$"
+          data-error-message="Разрешены только латинские, кириллические буквы, пробелы, знаки дефиса" required>
+        <span class="popup__input-error place-name-input-error"></span>
+        <input
+          id="link-input"
+          type="url"
+          name="link"
+          class="popup__input popup__input_type_url"
+          placeholder="Ссылка на картинку" required>
+        <span class="popup__input-error link-input-error"></span>
         <button type="submit" class="button popup__button">Сохранить</button>
       </form>
     </div>
   </div>
-  <div class="popup popup_type_image">
+  <div class="popup popup_type_image popup_is-animated">
     <div class="popup__content popup__content_content_image">
       <button type="button" class="popup__close"></button>
       <img src="" alt="" class="popup__image">
@@ -62,8 +115,6 @@
     </div>
   </div>
 </div>
-<!--<script src="./scripts/cards.js"></script>
-<script src="./scripts/index.js" defer></script> -->
 
 <template id="card-template">
   <li class="places__item card">
@@ -72,8 +123,10 @@
     <div class="card__description">
       <h2 class="card__title">
       </h2>
-      <button type="button" class="card__like-button"></button>
-    </div>
+      <div class="card__like">
+        <button type="button" class="card__like-button"></button>
+        <span class="card__like-counter" id="counter">0</span>
+      </div>
   </li>
 </template>
 </body>
